--- a/config/config.json
+++ b/config/config.json
@@ -2,8 +2,9 @@
     "directories": {
       "images": ["jpg", "jpeg", "png", "gif"],
       "videos": ["mp4", "avi", "mov"],
-      "documents": ["pdf", "docx", "txt"],
-      "music": ["mp3", "wav"]
+      "documents": ["pdf", "docx", "txt", "csv", "db", "xlsx"],
+      "music": ["mp3", "wav"],
+      "code": ["py", "js", "md", "json"]
     },
     "archive": "archive" 
 }
